fix: Remove unnecessary whitespace in heatmap tooltip styles

--- a/portal/frontend/src/styles/HomeView.scss
+++ b/portal/frontend/src/styles/HomeView.scss
@@ -1,4 +1,4 @@
-.heatmap-tooltip-modern {
+﻿.heatmap-tooltip-modern {
   position: absolute;
   left: 50%;
   top: 100%;
@@ -1122,7 +1122,5 @@
     padding: 0.03125rem 0.0625rem;
     font-size: 0.1875rem;
   }
-}
-
- 
+} 
  
